--- a/client/package.json
+++ b/client/package.json
@@ -16,12 +16,14 @@
     "vue-country-flag": "^1.3.1",
     "vue-country-region-select": "^2.0.11",
     "vue-flag-icon": "^1.0.6",
+    "vue-meta": "^2.3.3",
     "vue-moment": "^4.1.0",
     "vue-numeric-input": "^1.0.6",
     "vue-password-strength-meter": "^1.6.1",
     "vue-pdf": "^4.0.7",
     "vue-router": "^3.1.3",
     "vue-tel-input": "^4.2.0",
+    "vue2-editor": "^2.10.2",
     "vuetify": "^2.1.0",
     "vuex": "^3.1.2",
     "vuex-persistedstate": "^2.7.0",
