--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "vue-pdf": "^4.0.7",
     "vue-router": "^3.1.3",
     "vue-tel-input": "^4.2.0",
+    "vue-youtube": "^1.4.0",
     "vue2-editor": "^2.10.2",
     "vuetify": "^2.1.0",
     "vuex": "^3.1.2",
