--- a/client/package.json
+++ b/client/package.json
@@ -11,8 +11,10 @@
     "axios": "^0.19.2",
     "babel-runtime": "^6.26.0",
     "core-js": "^3.4.4",
+    "v-mask": "^2.1.0",
     "vue": "^2.6.10",
     "vue-cookies": "^1.6.1",
+    "vue-country-code": "^1.1.0",
     "vue-country-flag": "^1.3.1",
     "vue-country-region-select": "^2.0.11",
     "vue-flag-icon": "^1.0.6",
