--- a/server/package.json
+++ b/server/package.json
@@ -22,7 +22,6 @@
     "dotenv": "^8.2.0",
     "exchange-rates": "^0.1.2",
     "express": "^4.17.1",
-    "express-status-monitor": "^1.2.11",
     "fluentreports": "^1.2.8",
     "jsonwebtoken": "^8.5.1",
     "md5-hash": "^1.0.1",
@@ -32,5 +31,6 @@
     "node-fetch": "^2.6.0",
     "nodemailer": "^6.3.1",
     "salted-md5": "^4.0.2"
-  }
+  },
+  "devDependencies": {}
 }
