--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.611.0",
+    "axios": "^0.19.2",
     "base64topdf": "^1.1.8",
     "bcryptjs": "^2.4.3",
     "blueimp-md5": "^2.12.0",
